order-reception/src/main/kotlin/com/example/orderreception/error/exception/ValidationErrorException.kt
package com.example.orderreception.error.exception

data class ValidationErrorException(override val message: String) : RuntimeException()